--- a/index.html
+++ b/index.html
@@ -1,39 +1,59 @@
 <!DOCTYPE html>
 <html>
+	<head> 
+	<title>Admirable Websites</title>
+	</head>
+	<body>
+<h2><b><em>Which two websites are you most inspired by?</em></b></h2>
+<a href="http://maaemo.no/">Maaemo.no</a>
+<br>
+<a href="http://simonfosterdesign.com/home/">Simonfosterdesign.com</a>
 
-<head>
-<title>About Jason Reiniger</title>
-</head>
-<body>
-<h1>ABOUT ME</h1>
-<p>I am a semi-trailer salesman and importer living in <a href="http://en.wikipedia.org/wiki/Edmonton">Edmonton, Alberta, Canada</a>. I became interested in front-end web design and development because I always have ideas for really cool web based projects but lack the skillset to commercialize them. I see myself more as a project leader than a full time coder, so my main interest in studying this content comes in the form of being able to communicate with my future project teammates clearly as we start working on <strong>BIG</strong> things!</p>
+<h2><em><b>How do they exhibit use of space, size, or balance?</em></b></h2>
+<p><a href="http://maaemo.no/">Maaemo.no</a> displays an interesting use of columns that create a dynamic relationship between the positive and negative space as you work your way down below the fold. All of the negative space is white. This forces your eye to the contrasting images, which take you to other pages within the site. This web page feels like it was designed to be intentionally imbalanced. The size of the images vary greatly throughout. Whether it is two beside eachother, or one big one across the whole page, the site almost forces your mouse to drag over an image as you scroll, which causes the image to then take on a filter that acts as a visual cue for the user to enter the corresponding page.</p>
 
-<h2>My Mission<h2>
-<p>As I learn more about front-end, I hope to one day work as a mobile app developer with my own hand picked team because I like to work in creative and dynamic environments, populated by brilliant, interesting, curious, hard working, creative, and really fun people!</p>
 
-<h3>My Experience</h3>
-<ul><li><strong>Edmonton Event Center</strong><br><em>Marketing Director & Venue/Event Management<br>Edmonton, 2009-2010</em></li>
-<li><strong>Gravity Events</strong><br><em>Owner & Talent Buyer<br>Edmonton/NYC/Calgary, 2009-2013</em></li>
-<li><strong>Trailer Finder</strong><br><em>Head of Sales<br>Edmonton, 2014</em></li>
-<li><strong>Jayport Supply Co.</strong><br><em>Owner/Operator<br>Edmonton, 2014</em></li>
-</ul
+<p><a href="http://simonfosterdesign.com/home/">Simonfosterdesign.com</a> Uses two balanced columns with one image and one body of text per project displayed. Something that adds interest is how the image and text alternate from right to left on each page as you scroll. I feel like this creates variety while maintaining balance. The negative space in this changes as you scroll down to create a custom screen for each project. Adjusting the styling of the negative space gives a unique touch to each individual project's section of the site. This forces the designer to alter the font color throughout to ensure high contrast of the positive and negative space is maintained with each changing background. According to hierarchical sizing the designer is putting more emphasis on the title of the project, and the link to go see more, while rendering the short description less important. 
+</p>
 
-<h4>Education</h4> 
-<ul><li><strong>Strathcona Composite High School</strong><br><em>Edmonton, 2004-2007</li>
-</ul>
+<h2><b><em>What makes them similar and different?</em></b></h2>
+	<strong>Similarities</strong>
+	<br>
+	<p>Both sites are formatted to collapse into a single column as the browser is made smaller or the site is viewed on a mobile device. Each site uses the name of the business, or designer, as the focal point on the first page by way of hierarchy. Both sites are really clean and appealing visually, with minimal information on the homepage. They chose rather to direct you away from the landing page to find the more detailed information you want.</p>  
 
-<h5>Hobbies & Interests</h5><ul>
-<li><strong><a href="https://www.youtube.com/watch?v=xhJFeqPpBIs">Hockey</strong></a></li>
-<li>Fitness/Gym</li>
-<li>Swimming</li>
-<li>Trying new things & meeting new people</li>
-<li>Reading</li>
-<li>Volunteering</li>
-<li>And now, ofcourse....Coding!</li>
-</ul>
-<h6>Lets Talk!</h6>
-<p> If you want to chat about working on a project together or have any questions about something you see on my page, please done hesitate to <a href="mailto:reinigerj@gmail.com">Email Me</a>!
+	<strong>Differences</strong>
+	<br>
+	<p>When on a desktop screen, each site takes advantage of the use of columns in different ways. One leverages a more consistent two column format, while the other has images and text bouncing around from inhabiting two columns seperately to starting in one and crossing over into the next. <a href="http://simonfosterdesign.com/home/">Simonfosterdesign.com</a> uses a larger variety of color and more than one style of negative space, whereas <a href="http://maaemo.no/">Maaemo.no</a> keeps it really clean and consistent with white negative space throughout the site. </p>
 
-</body>
+	<h2><em><b>Thumbnail Sketches</b></em></h2>
+
+	<ul>
+	<li><strong>Thumbnail: Homepage</strong></li>
+		<p> The focal point of this page is intended to be the Trailer Finder Logo, so it is large, centered, and orange on a white background. Hierarcically speaking, the second focal point would be just below the logo in the form of the our yard page button as it is larger than it's two neighbouring circles. This too displays a stark contrast between the orange positive space and white negative space. Another eye catching feature is the arrow on the bottom, this is intended to draw your eye down, and keep you moving through the site. These will appear throughout the site to guide you where we want you to go. Centering of the Trailer Finder logo, and placing the three circles symmetrically below it create a homepage with a great sense of balance.</p>
+	<img src="proj1.home.jpg" alt="TrailerFinder Homepage">
+
+	<br>
+
+	<li><strong>Thumbnail: About</strong></li>
+		<p>The about page uses two columns to organize different pieces of information. It is still a balanced page. This entire site will be balanced and as traditional and straight forward as a cool looking site can be because the target client of this business is a fifty year old man with not much tech exposure. Creating a site that makes it easy to find the information the user wants quickly is the main goal. The focal point in this will be the Alberta provincial border outline as opposed to the text. In this industry it is important for people to know we are Albertans, born and bred. Oil men in this region take great pride in being Albertan, we want to identify with that. Hierarcically, this image carries the most visual weight on the page. The about us box will be above the actual description giving it some hierarchical advantage over the body of text, only to make it as easy as possible for user to follow exactly where they are as they work through the site.</p>
+	<img src="proj1.about.jpg" alt="TrailerFinder About Page">
+
+		<br>
+
+	<li><strong>Thumbnail: Our Yard</strong></li>
+		<p>Hierarchy plays more of a role on this page than the others. We want the image of our logo to stick in users minds, so it stands front and center as the focal point. The description of how to navigate the page that displays our companies products is of utmost importance. Due to the fact that North American users are our only target, and they are accustomed to reading top-down, left-right, the instructions land in the top-left corner. They will be largely sized and contrast the background loudly to generate as much attention through content hierarchy as possible. Now that the eye is there, the user can continue browsing the content. Developing a more detailed design that encourages flow throughout the entire inventory would be highly beneficial. </p>
+	<img src="proj1.ouryard.jpg" alt="TrailerFinder Our Yard Page">
+
+	<br>
+
+	<li><strong>Thumbnail: Contact</strong></li>
+		<p>This page is pretty simple. We want the user's attention to be solely on getting in touch with us. The focal point is clearly the contact box. the next most visually weight bearing image, and thus our hierarcical silver medalist, is the Trailer Finder logo in the bottom right. This will take you back to the home page. Now that you have scrolled through the site, there are buttons at the homepage that you can tap to easily shortcut to whichever of the three content pages you want to revisit.   </p>
+	<img src="proj1.contact.jpg" alt="TrailerFinder Contact Page">
+
+
+
+	</ul>
+
+	</body>
 
 </html>
