--- a/unit2/index.html
+++ b/unit2/index.html
@@ -30,7 +30,7 @@
 	<ul>
 	<li><strong>Thumbnail: Homepage</strong></li>
 		<p> The focal point of this page is intended to be the Trailer Finder Logo, so it is large, centered, and orange on a white background. Hierarcically speaking, the second focal point would be just below the logo in the form of the our yard page button as it is larger than it's two neighbouring circles. This too displays a stark contrast between the orange positive space and white negative space. Another eye catching feature is the arrow on the bottom, this is intended to draw your eye down, and keep you moving through the site. These will appear throughout the site to guide you where we want you to go. Centering of the Trailer Finder logo, and placing the three circles symmetrically below it create a homepage with a great sense of balance.</p>
-	<img src="proj1.home.jpg" alt="TrailerFinder Homepage">
+	<img src="assets/proj1.home.jpg" alt="TrailerFinder Homepage">
 
 	<br>
 
